--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <div class="why-drive-us-container">
       <div class="why-drive-with-us"  data-aos="fade-up" data-aos-duration="500">Why drive with us</div>
       <div class="smal-box-container">
-         <div class="boxes">
-            <div class="box-logo"><img id="one" data-aos="fade-up" data-aos-duration="500 src="./Logos/inr.png"></div>
-            <div class="box-content"  data-aos="fade-up" data-aos-duration="500">Withdraw earnings anytime from your<br> driver’s wallet.</div>
+         <div class="boxes" data-aos="fade-up" data-aos-duration="500">
+            <div class="box-logo"><img id="one"  src="./Logos/inr.png"></div>
+            <div class="box-content"  >Withdraw earnings anytime from your<br> driver’s wallet.</div>
          </div>
 
 
