--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
    <div class="mobile-bg">
       <div class="app-bg">
          <span class="theApp" data-aos="fade-up" data-aos-duration="600">The Driver App</span><br>
-      <span class="easy-to" data-aos="fade-up" data-aos-duration="800">Easy to use and reliable, the app was built for drivers, with drivers.</span><br> <button class="magnetic" data-aos="fade-up" data-aos-duration="900" id="download-btn">Download the App</button></div><br>
+      <span class="easy-to" data-aos="fade-up" data-aos-duration="800">Easy to use and reliable, the app was built for drivers, with drivers.</span><br> <button class="magnetic"  id="download-btn">Download the App</button></div><br>
      
       <div>
          <img id="app" data-aos="fade-up" data-aos-duration="600" src="./App.png">
@@ -147,7 +147,7 @@
    <br><br>
 
    <div class="car-travel">
-      
+      <span id="span-point"></span>
       <div class="vozi-container">
          <div class="vozi-raodmap" data-aos="fade-up" data-aos-duration="600">The Vozi Roadmap</div>
       </div>
