--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
       </div>
       <div class="travel-container" data-aos="fade-up" data-aos-duration="600"></div>
    </div>
-
+   <div class="car-mobile">
+      <div class="vozi-raodmap" data-aos="fade-up" data-aos-duration="600">The Vozi Roadmap</div>
+      <img id="verticle-roadmap" src="./verticle-raodmap.svg" >
+   </div>
 
    <div class="lower-car-section">
       <div class="lower-car-left">
@@ -188,7 +191,7 @@
          <div class="footer-logo"><img src="Logo.svg"></div>
          <div class="contact-us">
             <span id="txt-cont">CONTACT US</span><br><br>
-            <p>M : +91-999 666 9999</p>
+            <p style="color:white">M : +91-999 666 9999</p>
             <p>EMAIL : connect@vozi.in</p>
             <br>
             <a id="fb" href="#"><img src="./insta.svg"></a>
