page load speed fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="stylesheet" href="index.css">
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script> -->
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet">
@@ -226,7 +226,7 @@
          </div>
          <span id="copy">Copyright © 2022 VR Mobility Pvt ltd. All rights reserved</span>
       </div>
-      <script>
+      <!-- <script>
          var magnets = document.querySelectorAll(".magnetic");
          var strength = 50;
 
@@ -255,7 +255,7 @@
 
             //magnetButton.style.transform = 'translate(' + (((( event.clientX - bounding.left)/(magnetButton.offsetWidth))) - 0.5) * strength + 'px,'+ (((( event.clientY - bounding.top)/(magnetButton.offsetHeight))) - 0.5) * strength + 'px)';
          }
-      </script>
+      </script> -->
    </footer>
    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
    <script>
