--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
    </div>
    <div class="car-mobile">
       <div class="vozi-raodmap" data-aos="fade-up" data-aos-duration="600">The Vozi Roadmap</div>
-      <img id="verticle-roadmap" src="./verticle-raodmap.svg" >
+      <img id="verticle-roadmap" src="./verticle-roadmap.svg" >
    </div>
 
    <div class="lower-car-section">
